# axum-srr-sqlite-boilerplate

./: .env-example  .gitignore  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json  start_dev.sh  tailwind.config.js
assets/: main.css
db/: schema.sql
db/migrations/: 20240207111329_user_tables.sql
migrations/: 20240208120508_init.down.sql  20240208120508_init.up.sql
src/: api.rs  infrastructure.rs  main.rs  ui.rs
src/api/: config.rs  modules.rs  router.rs
src/api/modules/: common.rs  users.rs
src/api/modules/common/: common_handlers.rs  common_routes.rs
src/api/modules/users/: users_handlers.rs  users_routes.rs  views.rs
src/api/modules/users/views/: list_users_view.rs
src/application/modules/: users.rs
src/application/modules/users/: list_users_usecase.rs
src/domain/modules/users/: user_model.rs
src/infrastructure/: db.rs
src/infrastructure/modules/users/: users_repository.rs
src/ui/: layout.rs
src/ui/modules/common/views/: home_view.rs
src/ui/modules/users/: views.rs
src/ui/modules/users/views/: list_users_view.rs
templates/: base.html  home.html
templates/users/: list_users.html
